syntax = "proto3";
package metas.queries.meta;

import "ids/base/data_id.proto";
import "gogoproto/gogo.proto";

message QueryRequest {
  option (gogoproto.goproto_getters) = false;

  ids.base.DataID data_i_d = 1;
}